# libbft

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  configure.sh  run_rpc_test_cpp.sh
.devcontainer/: Dockerfile  devcontainer.json  install-cmake.sh  install-grpc.sh
doc/: .gitignore  hydroPowerPlant-stateMachine.dot  hydroPowerPlant-timedAutomata.dot
install/: lcov.sh  protobuf.sh  vcpkg.sh
script/: clean_cache.sh  clone_grpc.sh  grpc_protobuf_install.sh  install_grpc.sh  install_lcov.sh  install_protobuf.sh  run_rpc_test_cpp.sh
spec/cpp/: .bazelrc  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  build.sh  cov.sh  makefile
spec/cpp/cmake/: FindDefinitions.cmake  FindHelper.cmake  FindProtobufHelper.cmake  FindTestHelper.cmake
spec/cpp/container/gc/: Dockerfile
spec/cpp/container/ubu/: Dockerfile
spec/cpp/include/: BUILD.bazel
spec/cpp/include/libbft/: BUILD.bazel
spec/cpp/include/libbft/dbft2/: dBFT2Context.hpp  dBFT2Machine.hpp  dBFT2RPCMachine.hpp
spec/cpp/include/libbft/events/: Event.hpp  ScheduledEvent.hpp
spec/cpp/include/libbft/machine/: MachineId.hpp  TimedStateMachine.hpp
spec/cpp/include/libbft/replicated/: MachineContext.hpp  MultiContext.hpp  ReplicatedSTSM.hpp
spec/cpp/include/libbft/rpc-replicated/: RPCMachineContext.hpp
spec/cpp/include/libbft/single/: SingleTimerStateMachine.hpp  State.hpp  Transition.hpp
spec/cpp/include/libbft/timing/: Clock.hpp  CountdownNotifyTimer.hpp  CountdownTimer.hpp  Timer.hpp  TimerDelayable.hpp
spec/cpp/include/libbft/utils/: CLI.cpp  CLI.h  IPrintable.hpp  Pointer.hpp  Shortcuts.hpp
spec/cpp/src/: CMakeLists.txt  Condition.hpp  MultiSTSM.hpp  README.txt  SingleTimerStateMachine.hpp  State.h  State.hpp  TimedStateMachine.hpp  Timer.hpp  Transition.hpp  main.cpp  mainRPC.cpp
spec/cpp/src/bftevents-grpc/: .gitignore  BFTEventsClient.hpp  BFTEventsServer.hpp  BUILD.bazel  CMakeLists.txt  Makefile  bftclient.cc  bftevent.grpc.pb.cc  bftevent.grpc.pb.h  bftevent.pb.cc  bftevent.pb.h  bftevent.proto  bftserver.cc  mainBftclient.cc  mainBftserver.cc
spec/cpp/src/dbft2/: dBFT2Context.hpp  dBFT2Machine.hpp  dBFT2RPCMachine.hpp
spec/cpp/src/demo/: main.cpp
spec/cpp/src/demo-bft-rpc/: BUILD.bazel  mainRPC.cpp
spec/cpp/src/events/: Event.hpp  ScheduledEvent.hpp
spec/cpp/src/machine/: MachineId.hpp  TimedStateMachine.hpp
spec/cpp/src/p2p/: CMakeLists.txt  P2PServer.cc  P2PServer.cpp  P2PServer.h  bftp2p.grpc.pb.cc  bftp2p.grpc.pb.h  bftp2p.pb.cc  bftp2p.pb.h  bftp2p.proto  mainP2P.cpp
spec/cpp/src/replicated/: Event.hpp  MachineContext.hpp  MultiContext.hpp  ReplicatedSTSM.hpp  ScheduledEvent.hpp
spec/cpp/src/rpc-replicated/: RPCMachineContext.hpp  RPCMultiContext-UNUSED.hpp
spec/cpp/src/single/: SingleTimerStateMachine.hpp  State.hpp  Transition.hpp
spec/cpp/src/timing/: Clock.hpp  CountdownNotifyTimer.hpp  CountdownTimer.hpp  Timer.hpp  TimerDelayable.hpp
spec/cpp/src/utils/: CLI.cpp  CLI.h
spec/cpp/test-grpc/: .gitignore  Makefile  client.cc  mathtest.proto  server.cc
spec/cpp/tests/: .gitignore  CMakeLists.txt
spec/cpp/tests/dbft2/: dBFT2ContextTests.cpp  dBFT2MachineTests.cpp  dBFT2RPCMachineTests.cpp
spec/cpp/tests/events/: EventTests.cpp  TimedEventTests.cpp
spec/cpp/tests/machine/: MachineIdTests.cpp
spec/cpp/tests/replicated/: MachineContextTests.cpp  MultiContextTests.cpp  ReplicatedSTSMTests.cpp
spec/cpp/tests/single/: ActionTests.cpp  CMakeLists.txt  ConditionTests.cpp  SingleTimerStateMachineTests.cpp  StateTests.cpp  TransitionTests.cpp
spec/cpp/tests/timing/: CMakeLists.txt  ClockNotifyTimerTests.cpp  ClockTests.cpp  CountdownTimerTests.cpp  TimerDelayableTests.cpp  TimerTests.cpp
spec/cpp/tests/utils/: CMakeLists.txt  CliTests.cpp
spec/go/: README  go  main
spec/go/cmd/app_test/: main.go
spec/go/pkg/dbft2/: dbft2_context.go  dbft2_machine.go
spec/go/pkg/events/: event.go  timed_event.go
spec/go/pkg/machine/: single_timer_state_machine.go  timed_state_machine.go
spec/go/pkg/replicated/: event.go  machine_context.go  multi_context.go  replicated_stsm.go  scheduled_event.go
spec/go/pkg/single/: action.go  condition.go  param.go  state.go  transition.go
spec/go/pkg/timing/: clock.go  clock_test.go  countdown_notify_timer.go  countdown_timer.go  timer.go  timer_delayable.go  timer_test.go
spec/go/src/bftevent/: bftevent.pb.go
spec/go/src/dbft2/: dbft2_context.go  dbft2_machine.go
spec/go/src/events/: event.go  timed_event.go
spec/go/src/machine/: machine_id.go  single_timer_state_machine.go  timed_state_machine.go
spec/go/src/replicated/: machine_context.go  multi_context.go  replicated_stsm.go
spec/go/src/rpc_replicated/: rpc_machine_context.go
spec/go/src/simple_example/: main.go
spec/go/src/single/: action.go  action_test.go  condition.go  condition_test.go  state.go  transition.go
spec/go/src/timing/: clock.go  countdown_timer.go  timer.go  timer_delayable.go
spec/go/src/util/: constants.go
spec/go/timing/: clock_test.go  timer_delayable.go  timer_test.go
src/cpp/: CMakeLists.txt  Condition.hpp  Event.hpp  MultiSTSM.hpp  SingleTimerStateMachine.hpp  State.h  State.hpp  TimedStateMachine.hpp  Timer.hpp  TimerDelayable.hpp  Transition.cpp  Transition.h  Transition.hpp  main.cpp
src/go/: README
